--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <section class="right">
                 <picture>
                     <source media="(max-width: 700px)" srcset="./images/image-product-mobile.jpg">
-                    <img src="./images/image-product-desktop.jpg" alt="product-image">
+                    <img src="./images/image-product-desktop.jpg" alt="product image of a glass of perfume">
                 </picture>
             </section>
             <section class="left">
@@ -25,7 +25,7 @@
                 </p>
                 <div class="price">
                     <h2 class="price-tag">$149.99</h2>
-                    <p><s>$169.99</s></p>
+                    <p><del><span class="sr-only">Old Price</span>$169.99</del></p>
                 </div>
                 <button type="button" class="btn"><img class="cart-icon" src="./images/icon-cart.svg" alt="cart icon">Add to Cart</button>
             </section>
